<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.itachi1706.cheesecakeutilities.modules.StringToHexBin">
    <ScrollView
        android:id="@+id/svBinHex"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        android:background="@drawable/matrix">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <TextView
                android:id="@+id/tv_binhex_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10.0dip"
                android:shadowColor="#ff33ff33"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowRadius="10.0"
                android:text="@string/bin_hex_title"
                android:textColor="#ff00ff00"
                android:textColorHighlight="#ff33ff33"
                android:textSize="30.0dip"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/label_binhex_enter_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bin_hex_hint_enter_message"
                android:textColor="#ff00ff00"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/input_binhex_string"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFFFF"
                android:hint="@string/bin_hex_hint_click_paste"
                android:imeOptions="actionNone"
                android:inputType="textCapSentences"
                android:padding="5.0dip"
                android:text=""
                android:typeface="monospace" />

            <TextView
                android:id="@+id/label_binhex_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10.0dip"
                android:text="@string/bin_hex_header_choose_options"
                android:textColor="#ff00ff00"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TableLayout
                android:id="@+id/tl_binhex_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:id="@+id/tr_binhex_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/radio_binhex_option_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:theme="@style/BinHexLightRadio"
                            android:textColor="@color/white"
                            android:id="@+id/rb_binhex_bin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/bin_hex_opt_bin" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:theme="@style/BinHexLightRadio"
                            android:textColor="@color/white"
                            android:id="@+id/rb_binhex_hex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bin_hex_opt_hex" />
                    </RadioGroup>

                    <CheckBox
                        android:theme="@style/BinHexLightRadio"
                        android:textColor="@color/white"
                        android:shadowColor="@color/white"
                        android:id="@+id/checkbox_binhex_delimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bin_hex_opt_delimiter" />

                    <RadioGroup
                        android:id="@+id/radio_binhex_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:theme="@style/BinHexLightRadio"
                            android:textColor="@color/white"
                            android:id="@+id/rb_binhex_encode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/bin_hex_opt_encode" />

                        <RadioButton
                            android:theme="@style/BinHexLightRadio"
                            android:textColor="@color/white"
                            android:id="@+id/rb_binhex_decode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bin_hex_opt_decode" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btn_binhex_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/bin_hex_btn_translate" />

            <TextView
                android:id="@+id/label_binhex_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bin_hex_hint_translation"
                android:textColor="#ff00ff00"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/tv_binhex_results"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFFFF"
                android:inputType="none"
                android:focusable="false"
                android:padding="5.0dip"
                android:text=""
                android:typeface="monospace" />

            <TableLayout
                android:id="@+id/table_binhex_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:id="@+id/tr_binhex_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_binhex_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="20.0dip"
                        android:paddingRight="20.0dip"
                        android:text="@string/bin_hex_btn_copy"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btn_binhex_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="20.0dip"
                        android:paddingRight="20.0dip"
                        tools:ignore="ButtonStyle"
                        android:text="@string/bin_hex_btn_send_caps" />

                    <Button
                        android:id="@+id/btn_binhex_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="20.0dip"
                        tools:ignore="ButtonStyle"
                        android:paddingRight="20.0dip"
                        android:text="@string/bin_hex_btn_clear" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
