...
    <string name="bin_hex_hint_click_paste">(Click and hold to paste)</string>
    <string name="bin_hex_header_choose_options">CHOOSE OPTIONS:</string>
    <string name="bin_hex_opt_bin">Bin</string>
    <string name="bin_hex_opt_hex">Hex</string>
    <string name="bin_hex_opt_delimiter">Delimiter</string>
    <string name="bin_hex_opt_encode">Encode</string>
    <string name="bin_hex_opt_decode">Decode</string>
    <string name="bin_hex_btn_translate">TRANSLATE!</string>
    <string name="bin_hex_hint_translation">TRANSLATION:</string>
    <string name="bin_hex_btn_copy">COPY</string>
    <string name="bin_hex_btn_send_caps">SEND</string>
    <string name="bin_hex_btn_clear">CLEAR</string>

    <!-- HTC Serial ID -->
    <string name="htc_sn_id_serial_field_hint">Enter Serial Number</string>
    <string name="htc_sn_id_button_phone_serial">Use Phone Serial</string>
    <string name="htc_sn_id_btn_search">Search</string>

...
