...
    tools:context="com.itachi1706.cheesecakeutilities.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_menu_recycler_view">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>

